SKY: task information top right dropdown z-index bug fix

--- a/bundles/lincko/app/public/styles/submenu/taskdetail.css
+++ b/bundles/lincko/app/public/styles/submenu/taskdetail.css
@@ -128,6 +128,7 @@ td.app_layers_dev_skytasks_checkbox {
 	height: auto;
 	height: 48px;
 	outline: none;
+	z-index: 1003;
 }
 
 .submenu_menu_list:focus{
